<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Seafile</string>
    <string name="app_url" translatable="false">http://seafile.com</string>
    <string name="welcome_to_seafile">Welcome to Seafile</string>
    <string name="select_account">Choose an account to start</string>
    <string name="edit_account">Edit</string>
    <string name="delete_account">Delete</string>
    <string name="delete">Delete</string>
    <string name="delete_file">Are you sure to delete this file or folder?</string>
    <string name="delete_successful">Deleted successfully</string>
    <string name="delete_file_f">Delete file</string>
    <string name="delete_dir">Delete folder</string>
    <string name="server_hint">Server, like cloud.seafile.com</string>
    <string name="email_hint">Email</string>
    <string name="passwd_hint">Password</string>
    <string name="login">Login</string>
    <string name="open_file">Open</string>
    <string name="download_file">Download</string>
    <string name="redownload_file">Download again</string>
    <string name="cancel_download">Cancel</string>
    <string name="unknown_file_type">Unknown file type</string>
    <string name="activity_not_found">Can\`t find App to open this file</string>
    <string name="refresh">Refresh</string>
    <string name="add_account">Add Account</string>
    <string name="personal">Personal</string>
    <string name="shared">Shared</string>
    <string name="libraries">Libraries</string>
    <string name="cached">Cached</string>
    <string name="activities">Activities</string>
    <string name="pick_upload_type">Upload</string>
    <string name="accounts_https_hint" translatable="false">https</string>
    <string name="transfer_tasks">Transfer List</string>
    <string name="accounts">Accounts</string>
    <string name="settings">Settings</string>
    <string-array name="pick_upload_array">
        <item>File</item>
        <item>Photos/Videos</item>
        <item>Other</item>
    </string-array>
    <string name="choose_server">Choose a Seafile Server</string>
    <string-array name="choose_server_array">
        <item>SeaCloud.cc</item>
        <item>Cloud.seafile.de</item>
        <item>Shibboleth Login</item>
        <item>Other Seafile Server</item>
    </string-array>
    <string name="network_down">No network connection</string>
    <string name="unknow_error">Unknown error</string>
    <string name="invalid_server_address">Invalid server address</string>
    <string name="err_server_andress_empty">Server address can\`t be empty</string>
    <string name="err_email_empty">Email can\`t be empty</string>
    <string name="err_passwd_empty">Password can\`t be empty</string>
    <string name="err_login_failed">Login failed</string>
    <string name="err_wrong_user_or_passwd">Email or password error</string>
    <string name="err_token_expired">Authentication expired, please login again</string>
    <string name="upload">Upload</string>
    <string name="uploaded">Uploaded</string>
    <string name="updated">Updated</string>
    <string name="download_failed">Download failed</string>
    <string name="download_waiting">Download waiting</string>
    <string name="download_finished">Download finished</string>
    <string name="download_cancelled">Download cancelled</string>
    <string name="task_cancel">Cancel</string>
    <string name="task_retry">Retry</string>
    <string name="task_remove">Remove</string>
    <string name="task_remove_all_cancelled">Remove all cancelled tasks</string>
    <string name="task_remove_all_finished">Remove all finished tasks </string>
    <string name="file_action_star">Star</string>
    <string name="file_action_download">Download</string>
    <string name="file_action_update">Upload</string>
    <string name="file_action_share">Share link</string>
    <string name="file_action_export">Export</string>
    <string name="file_action_delete">Delete</string>
    <string name="file_action_rename">Rename</string>
    <string name="file_action_copy">Copy</string>
    <string name="file_action_move">Move</string>
    <string name="file_action_open_as">Open as</string>
    <string name="file_action_more">More</string>
    <string name="file_action_more_title">Choose your preferred option</string>
    <string-array name="file_action_more_array">
        <item>Export</item>
        <item>Copy</item>
        <item>Move</item>
        <item>Star</item>
    </string-array>
    <string-array name="file_type_array">
        <item>Text</item>
        <item>Audio</item>
        <item>Video</item>
        <item>Image</item>
        <item>Other</item>
    </string-array>
    <string name="wait">Wait</string>
    <string name="image_gallery_NoImageView_text">No image found</string>
    <string name="pick_photo_video_title">Choose photos/videos to upload</string>
    <string name="select_upload_items">Select items to upload</string>
    <plurals name="n_upload_items_selected">
        <item quantity="one">%1$d item selected</item>
        <item quantity="other">%1$d items selected</item>
    </plurals>
    <string name="dir_name_empty">Please enter the name of the folder</string>
    <string name="file_name_empty">Please enter the name of the file</string>
    <string name="password_empty">Please enter the password</string>
    <string name="wrong_password">wrong password</string>
    <string name="library_read_only">This library is read-only</string>
    <string name="error_when_load_dirents">Error when loading the folder</string>
    <string name="error_when_load_repos">Error when loading libraries</string>
    <string name="dir_empty">This folder is empty</string>
    <string name="no_repo">You have no libraries yet</string>
    <string name="no_app_available">No app can be found</string>
    <string name="add_to_seafile">Add to Seafile</string>
    <string name="ok">OK</string>
    <string name="no_account">Please set up an account in Seafile first</string>
    <string name="choose_an_account">Choose an account</string>
    <string name="choose_a_library">Choose a library</string>
    <string name="choose_a_folder">Choose a folder</string>
    <string name="load_accounts_fail">Failed to load Seafile accounts</string>
    <string name="load_libraries_fail">Failed to load libraries</string>
    <string name="load_dir_fail">Failed to load contents of this folder</string>
    <string name="not_supported_share">This type of share is not supported</string>
    <string name="edit">Edit</string>
    <string name="download_folder">Download folder</string>
    <string name="download_folder_title">Choose your preferred option</string>
    <string-array name="download_folder_options_array">
        <item>Download folder</item>
        <item>Download folder and subfolders</item>
    </string-array>
    <string name="add_file">Add</string>
    <string-array name="add_file_options_array">
        <item>Create file</item>
        <item>Create folder</item>
        <item>Upload file</item>
        <item>Take a photo</item>
    </string-array>
    <string name="create_new_file">Create a new file</string>
    <string name="create_new_dir">Create a new folder</string>
    <string name="camera">Take a photo here</string>
    <string name="download">Download</string>
    <string name="open">Open</string>
    <string name="last_modified">last modified</string>
    <string name="file_modified">modified</string>
    <string name="file_size">file size</string>
    <string name="library_not_found">The library has been deleted.</string>
    <string name="export_file">Export this file</string>
    <string name="no_upload_tasks">No upload tasks yet</string>
    <string name="no_download_tasks">No download tasks yet</string>
    <string name="seahub_url_hint">Note: Server address should contain the port. For example, www.example.com:8000</string>
    <string name="copy_link">Copy link</string>
    <string name="share_file_link">Share a link to this file</string>
    <string name="share_dir_link">Share a link to this folder</string>
    <string name="generating_link">Generating link&#8230;</string>
    <string name="link_ready_to_be_pasted">The link is ready to be pasted.</string>
    <string name="rename_file">Rename file</string>
    <string name="rename_dir">Rename folder</string>
    <string name="rename_successful">Renamed successfully.</string>
    <string-array name="nav_array">
        <item>Files</item>
        <item>Uploads</item>
        <item>Accounts</item>
        <item>Backup Photos</item>
    </string-array>
    <string name="no_starred_file">No starred file yet</string>
    <string name="added_to_upload_tasks">Uploading started</string>
    <string name="added_photo_to_upload_tasks">Photo uploading started</string>
    <string name="take_photo_successfully">Take photo successfully</string>
    <string name="tabs_library">Libraries</string>
    <string name="tabs_activity">Activities</string>
    <string name="tabs_starred">Starred</string>
    <string name="provide_password">Provide the password for library \"%s\"</string>
    <string name="upload_waiting">Upload waiting</string>
    <string name="upload_finished">Upload finished</string>
    <string name="upload_cancelled">Upload cancelled</string>
    <string name="upload_failed">Upload failed</string>
    <string name="days_ago">%d days ago</string>
    <string name="hours_ago">%d hours ago</string>
    <string name="minutes_ago">%d minutes ago</string>
    <string name="seconds_ago">%d seconds ago</string>
    <string name="just_now">Just now</string>
    <string name="error_when_load_starred">Error when loading starred files</string>
    <string name="open_as">Open as</string>
    <string name="select_upload_files">Select files to upload</string>
    <string name="storage_removed">Storage was removed</string>
    <string name="error_selecting_file">Error when selecting file</string>
    <plurals name="n_upload_files_selected">
        <item quantity="one">%1$d file selected</item>
        <item quantity="other">%1$d files selected</item>
    </plurals>
    <string name="empty_folder">Empty folder</string>
    <string name="choose_file">Choose a file</string>
    <string name="ssl_error">Security check failed</string>
    <string name="ssl_confirm">The security certificate of %s is not trusted. Do you want to continue?</string>
    <string name="ssl_confirm_cert_changed">%s uses an invalid security certificate. The connection is not secure. Do you want to continue?</string>
    <string name="ssl_confirm_title">Untrusted Connection</string>
    <string name="issued_to">Issued To</string>
    <string name="finger_prints">Fingerprints</string>
    <string name="period_of_validity">Period of Validity</string>
    <string name="sha1">SHA-1 %s</string>
    <string name="md5">MD5 %s</string>
    <string name="not_available">not available</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="lockpattern_continue_button_text">Next</string>
    <string name="settings_cuc_option_hint">Choose your preferred option. \nYou can change these options later in Settings.</string>
    <string name="settings_cuc_type_title">What to upload</string>
    <string name="settings_cuc_type_photo">Photos only</string>
    <string name="settings_cuc_type_video">Photos and videos</string>
    <string name="settings_cuc_finish_title">Finish</string>
    <string name="settings_cuc_ready">Seafile will now uploading files from your selected folders. \nFeel free to close the app during this process.</string>
    <string name="settings_cuc_swipe_left">Swipe left to continue.</string>
    <string name="settings_cuc_click_btn">Click to close the configuration helper.</string>
    <string name="shib_login_title">Shibboleth Login</string>
    <string name="shib_server_hint">Input server&#8230;</string>
    <string name="transfer_list_restart_all">Restart</string>
</resources>