<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/https_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onHttpsCheckboxClicked"
        style="@style/CustomCheckboxTheme"
        android:text="https" />

    <EditText
        android:id="@+id/server_url"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_hint"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwd_hint"
        android:inputType="textPassword" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="7dip"
        android:paddingTop="7dip" >

        <Button
            android:id="@+id/login_button"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@drawable/account_add_btn_default_holo_light"
            android:text="@string/login"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/status_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/seahub_url_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seahub_url_hint" />

</LinearLayout>