<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey">
    
    <TextView
          android:id="@+id/upload_selection_status"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal"
          android:text="@string/select_upload_files"
          android:singleLine="true"
          android:lines="1"
          android:textColor="@color/white"
          android:textSize="18sp"
          android:padding="5dp"
          />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:gravity="center_horizontal">

        <Button
            android:id="@+id/button_cancel_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            />

        <Button
            android:id="@+id/button_confirm_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:layout_weight="1"
            />
      </LinearLayout>
    

</LinearLayout>
