<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout android:id="@+id/progressContainer"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:visibility="gone"
                  android:gravity="center">

        <ProgressBar style="?android:attr/progressBarStyleLarge"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceSmall"
                  android:text=""
                  android:paddingTop="4dip"
                  android:singleLine="true"/>

    </LinearLayout>


    <FrameLayout android:id="@+id/listContainer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">

        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <ListView android:id="@android:id/list"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_alignParentTop="true"
                      android:drawSelectorOnTop="false"
                      android:layout_above="@+id/task_action_container"/>
            <TextView android:id="@+id/empty"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:visibility="gone"
                      android:gravity="center"
                      android:text="@string/no_upload_tasks"
                      android:textAppearance="?android:attr/textAppearanceLarge"/>

            <LinearLayout
                    android:id="@+id/task_action_container"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:background="@color/whitegrey"
                    android:layout_alignParentBottom="true"
                    android:padding="10dp"
                    android:visibility="gone"
                    android:orientation="horizontal">

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">
                    <ImageView
                            android:id="@+id/task_action_restart"
                            android:clickable="true"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/action_restart_selector"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/transfer_list_restart_all"
                            android:textSize="14sp"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">
                    <ImageView
                            android:id="@+id/task_action_delete"
                            android:clickable="true"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/action_delete_selector"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/delete"
                            android:textSize="14sp"/>
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
    </FrameLayout>
</LinearLayout>
